--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -15,3 +15,22 @@ ul.units {
 ul.units li {
   float: left;
 }
+
+.obb-board-panel {
+  width: 512px;
+  height: 512px;
+  position: relative;
+}
+
+div.obb-board {
+  top: 0;
+  height: 100%;
+}
+
+div.obb-square {
+  position: absolute;
+  width: 12.5%;
+  height: 12.5%;
+  transition: 0.13s;
+  background-color:pink;
+}
