--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -32,6 +32,7 @@ div.obb-square {
   width: 12.5%;
   height: 12.5%;
   transition: 0.13s;
+  border: 1px solid rgba(0, 0, 0, .2);
 }
 
 img.obb-ice {
