--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -49,7 +49,7 @@ img.unit {
 div.enemy {
   width:100%;
   height:100%;
-  background-color: red;
+  background-color: blue;
   opacity: 0.2;
   z-index: 10;
   position: absolute;
