--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -54,3 +54,21 @@ div.enemy {
   z-index: 10;
   position: absolute;
 }
+
+div.selected-p1 {
+  width:100%;
+  height:100%;
+  background-color: green;
+  opacity: 0.5;
+  z-index: 10;
+  position: absolute;
+}
+
+div.selected-p2 {
+  width:100%;
+  height:100%;
+  background-color: blue;
+  opacity: 0.4;
+  z-index: 10;
+  position: absolute;
+}
