--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -72,3 +72,12 @@ div.selected-p2 {
   z-index: 10;
   position: absolute;
 }
+
+div.possible-destination {
+  width:100%;
+  height:100%;
+  opacity: 0.6;
+  z-index: 1000;
+  position: absolute;
+}
+
