--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -81,3 +81,11 @@ div.possible-destination {
   position: absolute;
 }
 
+div.element-quantity {
+  width:100%;
+  height:100%;
+  opacity: 1;
+  z-index: 10000;
+  position: absolute;
+}
+
