--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -79,6 +79,16 @@ div.possible-destination {
   opacity: 0.6;
   z-index: 1000;
   position: absolute;
+  background: radial-gradient(rgba(20,85,30,0.5) 17%,#208530 0,rgba(0,0,0,0.5) 0,rgba(0,0,0,0) 0);
+}
+
+div.possible-target {
+  width:100%;
+  height:100%;
+  opacity: 0.6;
+  z-index: 1000;
+  position: absolute;
+  background: radial-gradient(transparent 0%,transparent 80%,rgba(255,0,0,0.8) 80%);
 }
 
 div.element-quantity {
