--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -99,3 +99,19 @@ div.element-quantity {
   position: absolute;
 }
 
+div.action-source {
+  width:100%;
+  height:100%;
+  opacity: 0.1;
+  z-index: 1000;
+  position: absolute;
+}
+
+div.action-source-p1 {
+  background-color: green;
+}
+
+div.action-source-p2 {
+  background-color: blue;
+}
+
