--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -115,3 +115,21 @@ div.action-source-p2 {
   background-color: blue;
 }
 
+div.attacked {
+  width:100%;
+  height:100%;
+  opacity: 0.3;
+  z-index: 1000;
+  position: absolute;
+  background-color:red;
+}
+
+div.target {
+
+  width:100%;
+  height:100%;
+  z-index: 2000;
+  position: absolute;
+  opacity: 1;
+  background-image: url('http://orionsbelt.eu/public/battle/target.gif');
+}
