--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -111,12 +111,13 @@ div.action-source {
   width:100%;
   height:100%;
   opacity: 0.1;
-  z-index: 1000;
+  z-index:10;
   position: absolute;
 }
 
 div.action-source-p1 {
   background-color: green;
+  opacity:0.3;
 }
 
 div.action-source-p2 {
