--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -122,6 +122,7 @@ div.action-source-p1 {
 
 div.action-source-p2 {
   background-color: blue;
+  opacity:0.4;
 }
 
 div.attacked {
@@ -134,11 +135,18 @@ div.attacked {
 }
 
 div.target {
-
   width:100%;
   height:100%;
   z-index: 2000;
   position: absolute;
   opacity: 1;
   background-image: url('http://orionsbelt.eu/public/battle/target.gif');
+}
+
+img.unit-possible-attack {
+  width:100%;
+  height:100%;
+  z-index: 20000;
+  position: absolute;
+  opacity: 1;
 }
